--- a/index.html
+++ b/index.html
@@ -1,32 +1,120 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Index</title>
-<h1>Index Page</h1>
-<h2>Bringing Pages Together</h2>
-</head>
-<body>
-<a href="filetwo.html#section_two">File 2 Section 2</a><br />
-<a href="filetwo.html#section_three">File 2 Section 3</a><br />
-<a href="filethree.html#section_two">File 3 Section 2</a><br />
-<a href="filethree.html#section_three">File 3 Section 3</a><br />
-<a href="filefour.html#section_two">File 4 Section 2</a><br />
-<a href="filefour.html#season_three">File 4 Section 3</a><br />
-<br>
-<a href=image.html>Picture Page</a><br><br>
+<html lang="en">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>HackGSU</title>
+		<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+		<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+		<link href="style.css" rel="stylesheet">
+	</head>
+	<body>
+		<div id="menu">
+		<h2>HACK<strong>GSU</strong> '20</h2>
+		<ul>
+			<li><a href="https://hackspurt.com/hackgsu/register/student" title="Signup">Register</a></li>
+			<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSftQZXD6Z4xM7di1TEhcDAXFgWHZ70dmDwNxdz-eYff0mkj7g/viewform" title="Signup">Volunteer</a></li>
+			<li><a href="http://hackgsu.com/faq" title="FAQ">FAQ</a></li>
+			<li><a href="mailto:hackathon@cs.gsu.edu" title="Contact">Contact</a></li>
+			<li><a href="https://www.gsu.edu/" title="GSU Homepage">GSU Homepage</a></li>
+		</ul>
+		</div>
+		<div id="hero_wrapper">
+			<div id="info_box">
+				<h1>HACK<strong>GSU</strong> 2020</h1>
+				<h2>11.01 - 11.03</h2>
+				<a class="button" href="https://hackspurt.com/hackgsu/register/student" title="Reserve Your Ticket">RESERVE YOUR TICKET</a>
+			</div>
+		</div>
 
-<a href=format.html>Format Page</a>
-<br>
-<br>
-<br>
+		<div id="introduction" class="grouped_box">
+			<div class="photo">
+				<img src="./hgsu1.jpg" alt="Hack GSU photo"/>
+			</div>
+			<div class="what_is">
+				<h2>What Is HackGSU?</h2>
+				<p>HackGSU is the Hackathon hosted by the GSU Computer Science Department's
+				   ACM &amp; IEEE student organizations. 100% free of charge, Lots of Food, $$ Prizes $$.
+				   This semester, HackGSU will be a 500+ participant event taking place from November 1- 3, 2019.
+				</p>
+				<a class="button" href="http://hackgsu.com/faq" title="Learn More">MORE</a>
+			</div>
+		</div>
+		<div class="grouped_box reverse_column">
+			<div class="photo">
+				<img src="./hgsu2.jpg" alt="Hack GSU photo"/>
+			</div>
+			<div class="bring">
+				<h2>What To Bring</h2>
+				<p>You will definitely need your laptop, phone, chargers (phone and laptop),
+					toiletries (toothbrush, toothpaste, deodorant), headphones, medication (if applicable),
+					as well as a valid student or government ID. Feel free to also bring along a sleeping bag,
+					and we recommend some comfortable clothes (sweatpants and a hoodie are highly recommended).
+				</p>
+				<a class="button" href="http://hackgsu.com/faq" title="Learn More">MORE</a>
+			</div>
+		</div>
+		<div class="sponsor">
+			<img src="./sponsor_logo.png" alt="sponsor logo">
+			<div class="sponsor_segment">
+				<h4>Sponsored By NCR</h4>
+				<p>NCR is the world's leading enterprise technology provider of software, hardware and services for banks, retailers, restaurants, small business and telecom & technology. </p>
+			</div>
+		</div>
 
-<a href="1.html">Assn 2: pt 1</a><br />
-<a href="2.html">Assn 2: pt 2</a><br />
-<a href="3.html">Assn 2: pt 3</a><br />
-<a href="4.html">Assn 2: pt 4</a><br />
-<a href="5.html">Assn 2: pt 5</a><br />
-<a href="6.html">Assn 2: pt 6</a><br />
-<a href="7.html">Assn 2: pt 7</a><br />
-</body>
+		<div class="action_section">
+			<div id="volunteer">
+				<h2>Volunteer</h2>
+				<img src="./hgsu10.jpg" alt="Hack GSU photo">
+
+				<a class="button" href="https://goo.gl/forms/z4BOXGSxBFYqFsf13" title="Apply Now">Apply Now</a>
+				<a class="button inverse" href="#" title="Learn More">Learn More</a>
+			</div>
+			<div id="benefits">
+			<h2>Benefits</h2>
+			<p>The perks of being a volunteer:</p>
+				<ul>
+					<li>Complimentary HACKGSU Shirt</li>
+					<li>Looks great on your resume or CV</li>
+					<li>Build up your communication skills</li>
+					<li>Form Lifetime memories and connections</li>
+				</ul>
+			</div>
+			<div id="dates">
+			   <h2>Dates</h2>
+			   <dl>
+				<dt>11.01 - FRIDAY</dt>
+					<dd>6:00 PM - Students Check-in</dd>
+					<dd>7:30 PM - Late Registration</dd>
+				<dt>11.02 - SATURDAY</dt>
+					<dd>9:00 AM - Workshops</dd>
+					<dd>12:00 AM - NCR Midnight Madness</dd>
+				<dt>11.03 - SUNDAY</dt>
+					<dd>10:00 AM - Submit Project & Hacking Ends</dd>
+					<dd>1:00 PM - Closing Ceremonies: Awards</dd>
+			   </dl>
+			</div>
+		</div>
+		<div id="footer">
+			<span>
+				<img src="./logo_footer.png" alt="GSU Logo">
+				<span id="footnote">
+					Built By GSU Panthers
+				</span>
+			</span>
+			<ul class="footer_links">
+			   <li><a href="https://hackspurt.com/hackgsu/register/student" title="Signup">Register Now</a></li>
+			   <li><a href="https://hackspurt.com/student" title="">Check In Now</a></li>
+			   <li><a href="http://hackgsu.com/faq" title="">About HackGSU</a></li>
+			   <li><a href="https://www.gsu.edu/" title="">GSU Website</a></li>	
+			</ul>
+			<ul class="footer_links">
+			   <li><a href="http://sponsors.hackgsu.com/hackGSU_Sponsorship_packet.pdf" title="">Become A Sponsor</a></li>
+			   <li><a href="http://hackgsu.com/schedule" title="">Event Schedule</a></li>
+			   <li><a href="https://forms.gle/Coz1MATrcqVScWiQ8" title="Travel Reimbursement">Travel Reimbursement</a></li>
+			   <li><a href="#" title="">YouTube: About This Page</a></li>
+			</ul>
+			
+		</div>
+	</body>
 </html>
